--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1>
-  {{title}}
-</h1>
+<div class="wrapper">
+  <app-layout class="layout"></app-layout>
+  <app-toolbar class="toolbar"></app-toolbar>
+  <app-contenido class="contenido"></app-contenido>
+  
+  
+</div>
