--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>
-  {{title}}
-</h1>
+
+
+<div class="wrapper">
+  <app-layout class="layout"></app-layout>
+  <app-toolbar class="toolbar"></app-toolbar>
+  <app-contenido class="contenido"></app-contenido>
+  <app-lista-alumnos class="alumnos"></app-lista-alumnos>
+</div>
